--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.3.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
   }
 }
