login persists past refreshes

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "bson": "^5.2.0"
   }
 }
