--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/alex-w-99/final-project-node-server-app#readme",
   "dependencies": {
+    "@mui/icons-material": "^5.11.16",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
