--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "name": "final-project-node-server-app",
   "version": "1.0.0",
-  "description": "Node.js HTTP Web server for final-project-react-web-app",
+  "description": "Node.js HTTP Web server back-end for Chews Wisely web app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
